src/test/deca/syntax/invalid/created/parser/no_init_but_assign.deca.res
no_init_but_assign.deca:13:12: mismatched input ';' expecting {'false', 'new', 'null', 'readInt', 'readFloat', 'this', 'true', IDENT, '-', '(', '!', INT, FLOAT, STRING}
